test/Error/Purity/CannotPurifyTop1/Main.ds

-- Cannot purify top-level effects.
list	= mapL print ["perch", "tetra", "cichlid"]

